fixed modal position and scrollbar

--- a/styles/_modal.scss
+++ b/styles/_modal.scss
@@ -2,7 +2,7 @@
    width: 100%;
    height: 100%;
    position: fixed;
-   top: 42px;
+   top: 0;
    left: 0;
    background: rgba(0, 0, 0, 0.4);
    z-index: 11;
@@ -13,6 +13,7 @@
       background: #000;
       margin: 87px auto;
       justify-items: center;
+      top: 7%;
       .close-btn {
          position: absolute;
          padding: 15px;
@@ -24,7 +25,7 @@
          // border: 2px solid red;
          display: flex;
          position: absolute;
-         top: 50%;
+         top: 52%;
          left: 50%;
          transform: translate(-50%, -50%);
          padding: 10px;
@@ -81,7 +82,26 @@
                @include secondary-font;
             }
             .movie-modal-overview {
-               margin-bottom: 10px;
+               margin-bottom: 20px;
+               height: 250px;
+               overflow: auto;
+               &::-webkit-scrollbar {
+                  width: 5px;
+                  border-radius: 3px;
+               }
+               &::-webkit-scrollbar-track {
+                  background: #ffffff;
+                  border-radius: 10px;
+               }
+
+               /* Handle */
+               &::-webkit-scrollbar-thumb {
+                  background: #bdbdbd;
+                  border-radius: 10px;
+                  &:hover {
+                     background: $color-accent;
+                  }
+               }
             }
          }
       }
