--- a/styles/styles.css
+++ b/styles/styles.css
@@ -208,7 +208,7 @@ h2 {
   width: 100%;
   height: 100%;
   position: fixed;
-  top: 42px;
+  top: 0;
   left: 0;
   background: rgba(0, 0, 0, 0.4);
   z-index: 11;
@@ -220,6 +220,7 @@ h2 {
   background: #000;
   margin: 87px auto;
   justify-items: center;
+  top: 7%;
 }
 .modal-wraper .movie-modal .close-btn {
   position: absolute;
@@ -230,7 +231,7 @@ h2 {
 .modal-wraper .movie-modal .movie-modal-container {
   display: flex;
   position: absolute;
-  top: 50%;
+  top: 52%;
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 10px;
@@ -292,7 +293,25 @@ h2 {
   text-transform: uppercase;
 }
 .modal-wraper .movie-modal .movie-modal-container .movie-modal-text .movie-modal-overview {
-  margin-bottom: 10px;
+  margin-bottom: 20px;
+  height: 250px;
+  overflow: auto;
+  /* Handle */
+}
+.modal-wraper .movie-modal .movie-modal-container .movie-modal-text .movie-modal-overview::-webkit-scrollbar {
+  width: 5px;
+  border-radius: 3px;
+}
+.modal-wraper .movie-modal .movie-modal-container .movie-modal-text .movie-modal-overview::-webkit-scrollbar-track {
+  background: #ffffff;
+  border-radius: 10px;
+}
+.modal-wraper .movie-modal .movie-modal-container .movie-modal-text .movie-modal-overview::-webkit-scrollbar-thumb {
+  background: #bdbdbd;
+  border-radius: 10px;
+}
+.modal-wraper .movie-modal .movie-modal-container .movie-modal-text .movie-modal-overview::-webkit-scrollbar-thumb:hover {
+  background: #cc0000;
 }
 
 .signin-wraper {
